Cria construtor para Caixa

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,13 @@
     // Para obter mais informações, acesse: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
+        {
+            "type": "java",
+            "name": "Launch App",
+            "request": "launch",
+            "mainClass": "App",
+            "projectName": "OO_StoreCase_d2a1168f"
+        },
         {
             "type": "java",
             "name": "Launch Current File",
